replace submit button with directive

--- a/src/app/data-management/components/document-type-form/document-type-form-view/document-type-form-view.component.html
+++ b/src/app/data-management/components/document-type-form/document-type-form-view/document-type-form-view.component.html
@@ -6,6 +6,9 @@
     </mat-error>
   </mat-form-field>
 
-  <app-submit-button [disabled]="documentTypeForm.invalid || documentTypeForm.pristine" (click)="onSubmit()">
-  </app-submit-button>
+  <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
+    [disabled]="documentTypeForm.invalid || documentTypeForm.pristine"
+    (click)="onSubmit()">
+    Lagre   
+  </button>
 </form>
