--- a/src/app/data-management/components/employer-form/employer-form-view/employer-form-view.component.html
+++ b/src/app/data-management/components/employer-form/employer-form-view/employer-form-view.component.html
@@ -28,6 +28,9 @@
     </mat-error>
   </mat-form-field>
 
-  <app-submit-button [disabled]="employerForm.invalid || employerForm.pristine" (click)="onSubmit()">
-  </app-submit-button>
+  <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
+    [disabled]="employerForm.invalid || employerForm.pristine"
+    (click)="onSubmit()">
+    {{ isCreateForm ? 'Legg til' : 'Oppdater' }} 
+  </button>
 </form>
