--- a/src/app/profile/password-form/password-form.component.html
+++ b/src/app/profile/password-form/password-form.component.html
@@ -32,11 +32,12 @@
         {{ this.error }}
       </mat-error>
       <br />
-    
-      <app-submit-button
-        [disabled]="passwordForm.invalid"
+
+      <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
+        [disabled]="passwordForm.invalid || passwordForm.pristine"
         (click)="onSubmit()">
-      </app-submit-button>
+        Lagre   
+      </button>
     </form>
   </mat-card-content>
 </mat-card>
