--- a/src/app/profile/profile-form/profile-form.component.html
+++ b/src/app/profile/profile-form/profile-form.component.html
@@ -21,11 +21,12 @@
             Kontaktnummer må være mellom 4 og 12 siffer.
         </mat-error>
       </mat-form-field>
-    
-      <app-submit-button
+      
+      <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
         [disabled]="profileForm.invalid || profileForm.pristine"
         (click)="onSubmit()">
-      </app-submit-button>
+        Lagre   
+     </button>
     </form>
   </mat-card-content>
 </mat-card>
