--- a/src/app/users/components/user-form/user-form-view/user-form-view.component.html
+++ b/src/app/users/components/user-form/user-form-view/user-form-view.component.html
@@ -53,6 +53,9 @@
     </mat-error>
   </mat-form-field>
 
-  <app-submit-button [disabled]="userForm.invalid || userForm.pristine" (click)="onSubmit()">
-  </app-submit-button>
+  <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
+    [disabled]="userForm.invalid || userForm.pristine"
+    (click)="onSubmit()">
+    {{ isCreateForm ? 'Legg til' : 'Oppdater' }} 
+  </button>
 </form>
