--- a/src/app/shared/components/list-card/list-card.component.html
+++ b/src/app/shared/components/list-card/list-card.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutAlign="space-between center" class="app-card mb-1 p-3 ellipsis mat-elevation-z2 route-anim-block" matRipple>  
+<div fxLayout="row" fxLayoutAlign="space-between center" [ngClass]="panelClass" class="app-card mb-1 p-3 ellipsis mat-elevation-z2" matRipple>  
     <mat-icon class="mr-2">{{ startIcon }}</mat-icon>
     <span class="ellipsis mr-auto" fxFlex>
         {{ text }}
