--- a/src/app/shared/layout/main-nav/main-side-nav-content/main-side-nav-content.component.html
+++ b/src/app/shared/layout/main-nav/main-side-nav-content/main-side-nav-content.component.html
@@ -16,7 +16,7 @@
 
 <mat-nav-list >
 
-  <a mat-list-item (click)="navItemClick()" [routerLink]="['/hjem']" [routerLinkActive]="['active']">
+  <a mat-list-item (click)="navItemClick()" [routerLink]="['/']" [routerLinkActive]="['active']">
     <mat-icon mat-list-icon>home</mat-icon>
     <p mat-line>Hjem</p>
   </a>
