--- a/src/app/shared/layout/main-nav/main-side-nav-content/main-side-nav-content.component.html
+++ b/src/app/shared/layout/main-nav/main-side-nav-content/main-side-nav-content.component.html
@@ -14,26 +14,26 @@
 
 <mat-divider></mat-divider>
 
-<mat-nav-list >
+<span class="nav-list">
 
-  <a mat-list-item (click)="navItemClick()" [routerLink]="['/']" [routerLinkActive]="['active']">
-    <mat-icon mat-list-icon>home</mat-icon>
-    <p mat-line>Hjem</p>
+  <a matRipple (click)="navItemClick()" [routerLink]="['/']" [routerLinkActive]="['active']">
+    <mat-icon>home</mat-icon>
+    <span>Hjem</span>
   </a>
 
   <mat-divider class="mid-divider"></mat-divider>
 
-  <a mat-list-item (click)="navItemClick()" [routerLink]="['/oppdrag']" [routerLinkActive]="['active']">
-    <mat-icon mat-list-icon>view_list</mat-icon>
-    <p mat-line>Oppdrag</p>
+  <a matRipple (click)="navItemClick()" [routerLink]="['/oppdrag']" [routerLinkActive]="['active']">
+    <mat-icon>view_list</mat-icon>
+    <span>Oppdrag</span>
   </a>
 
   <mat-divider class="mid-divider"></mat-divider>
 
   <ng-container *ifRole="RolePresets.Internal">
-    <a mat-list-item (click)="navItemClick()" [routerLink]="['/timer']" [routerLinkActive]="['active']">
-      <mat-icon mat-list-icon>timer</mat-icon>
-      <p mat-line>Timer</p>
+    <a matRipple (click)="navItemClick()" [routerLink]="['/timer']" [routerLinkActive]="['active']">
+      <mat-icon>timer</mat-icon>
+      <span>Timer</span>
     </a>
   </ng-container>
 
@@ -41,42 +41,42 @@
 
   <span *ifRole="[Roles.Leder]" fxHide.xs>
     <div mat-subheader class="color-accent-light pb-0">Administrering</div>
-    <a mat-list-item (click)="navItemClick()" [routerLink]="['/data']" [routerLinkActive]="['active']">
-      <mat-icon mat-list-icon>dns</mat-icon>
-      <p mat-line>Data</p>
+    <a matRipple (click)="navItemClick()" [routerLink]="['/data']" [routerLinkActive]="['active']">
+      <mat-icon>dns</mat-icon>
+      <span>Data</span>
     </a>
     <mat-divider class="mid-divider"></mat-divider>
-    <a mat-list-item (click)="navItemClick()" [routerLink]="['/brukere']" [routerLinkActive]="['active']">
-      <mat-icon mat-list-icon>people</mat-icon>
-      <p mat-line>Brukere</p>
+    <a matRipple (click)="navItemClick()" [routerLink]="['/brukere']" [routerLinkActive]="['active']">
+      <mat-icon>people</mat-icon>
+      <span>Brukere</span>
     </a>
     <mat-divider class="mid-divider"></mat-divider>
-    <a mat-list-item (click)="navItemClick()" [routerLink]="['/timeadministrering']" [routerLinkActive]="['active']">
-      <mat-icon mat-list-icon>assessment</mat-icon>
-      <p mat-line>Timer</p>
+    <a matRipple (click)="navItemClick()" [routerLink]="['/timeadministrering']" [routerLinkActive]="['active']">
+      <mat-icon>assessment</mat-icon>
+      <span>Timer</span>
     </a>
     <mat-divider class="mid-divider"></mat-divider>
 
     <div mat-subheader class="pb-0 color-accent-light">Statistikk</div>
-    <a mat-list-item (click)="navItemClick()" [routerLink]="['/timestatistikk']" [routerLinkActive]="['active']">
-      <mat-icon mat-list-icon>assessment</mat-icon>
-      <p mat-line>Timestatistikk</p>
+    <a matRipple (click)="navItemClick()" [routerLink]="['/timestatistikk']" [routerLinkActive]="['active']">
+      <mat-icon>assessment</mat-icon>
+      <span>Timestatistikk</span>
     </a>
     <mat-divider class="mid-divider"></mat-divider>
   </span>
 
   <span class="bottom-list">
     <mat-divider></mat-divider>
-    <a mat-list-item (click)="navItemClick()" [routerLink]="['/profil']" [routerLinkActive]="['active']">
-      <mat-icon mat-list-icon>person</mat-icon>
-      <p mat-line>Profil</p>
+    <a matRipple (click)="navItemClick()" [routerLink]="['/profil']" [routerLinkActive]="['active']">
+      <mat-icon>person</mat-icon>
+      <span>Profil</span>
     </a>
     <mat-divider class="mid-divider"></mat-divider>
-    <a mat-list-item (click)="logOut()">
-      <mat-icon mat-list-icon>power_settings_new</mat-icon>
-      <p mat-line>Logg ut</p>
+    <a matRipple (click)="logOut()">
+      <mat-icon>power_settings_new</mat-icon>
+      <span>Logg ut</span>
     </a>
   </span>
 
-</mat-nav-list>
+</span>
 
