--- a/src/app/shared/layout/main-nav/main-side-nav-content/main-side-nav-content.component.html
+++ b/src/app/shared/layout/main-nav/main-side-nav-content/main-side-nav-content.component.html
@@ -1,5 +1,5 @@
 
-<mat-toolbar fxLayout="column" fxLayoutAlign="center start" class="bg-primary-dark">
+<mat-toolbar fxLayout="column" fxLayoutAlign="center start" class="bg-primary">
 
   <ng-container *ngIf="isOnline$ | async else offlineHeader">
     <span class="mat-small color-success"> Tilkoblet internett </span>
