--- a/src/app/shared/layout/main-nav/detail-top-nav/detail-top-nav.component.scss
+++ b/src/app/shared/layout/main-nav/detail-top-nav/detail-top-nav.component.scss
@@ -2,7 +2,7 @@
 
 .container {
     position:relative;
-    background-color:$primary-dark;
+    background-color:$primary;
     max-height:40vh;
   }
 
