--- a/src/app/shared/layout/main-nav/main-bottom-nav/main-bottom-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-bottom-nav/main-bottom-nav.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="mat-elevation-z4 bg-primary-dark toolbar-slim" fxLayout="row" fxLayoutAlign="space-around center">
+<mat-toolbar class="mat-elevation-z4 bg-primary toolbar-slim" fxLayout="row" fxLayoutAlign="space-around center">
         <button [routerLink]="['/']" [routerLinkActive]="['active']" fxFlex
          mat-icon-button aria-label="Neste side">
 
