--- a/src/app/data-management/data-manager/data-manager.component.html
+++ b/src/app/data-management/data-manager/data-manager.component.html
@@ -1,4 +1,4 @@
-<div class="static-page-container" fxLayout="column" fxLayoutGap="8px">
+<div class="h-100 p-2" fxLayout="column" fxLayoutGap="8px">
   <app-data-table-picker
     [tables]="tables" 
     [selectedTable]="selectedTable$ | async" 
