--- a/src/app/shared-timesheet/components/timesheet-card/timesheet-card.component.html
+++ b/src/app/shared-timesheet/components/timesheet-card/timesheet-card.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="space-between start" class="timesheet-card bg-foreground mat-elevation-z2"
+<div fxLayout="column" fxLayoutAlign="space-between start" class="app-card p-2 mat-elevation-z2"
   *ngIf="timesheet">
 
   <span fxLayout="row" fxLayoutAlign="space-between stretch" class="w-100">
