--- a/src/app/shared/layout/main-nav/detail-top-nav/detail-top-nav.component.html
+++ b/src/app/shared/layout/main-nav/detail-top-nav/detail-top-nav.component.html
@@ -43,7 +43,7 @@
 
         <span class="ml-6 mb-2">
             <ng-container *ngFor="let line of config.title; let last =  last">
-                <div [ngClass]="config.imgSrc ? 'img-title-overlay' : ''" class="title-line fadeInTop pl-2 pr-2">{{ line }}</div><br />
+                <div [ngClass]="config.imgSrc ? 'img-title-overlay' : ''" class="title-line fadeInDown-slow pl-2 pr-2">{{ line }}</div><br />
             </ng-container>
         </span>
 
