--- a/src/app/timesheet/timesheet-list/timesheet-list.component.html
+++ b/src/app/timesheet/timesheet-list/timesheet-list.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="start stretch" class="h-100">
+<div fxLayout="column" fxLayoutAlign="start stretch" class="h-100 max-width">
 
     <button mat-fab aria-label="ny" class="action_fab" (click)="openTimesheetForm(getCurrentFilter().mission)">
         <mat-icon class="scale-125">add</mat-icon>
