--- a/src/app/timesheet/timesheet-week-view/timesheet-mission-bar/timesheet-mission-bar.component.scss
+++ b/src/app/timesheet/timesheet-week-view/timesheet-mission-bar/timesheet-mission-bar.component.scss
@@ -4,6 +4,6 @@
 .mission-bar{
     border-radius:4px!important;
     height:100%;
-    padding:$content-margin * 0.5px!important; 
+    padding:$gap-size-unit * 0.5px!important; 
     text-align:center;
 }
