--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -13,7 +13,26 @@
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-
-
-@include angular-material-theme($kbtv-client-theme);
-
+@include mat-core-theme($kbtv-client-theme); //
+@include mat-autocomplete-theme($kbtv-client-theme); //
+@include mat-badge-theme($kbtv-client-theme); //
+@include mat-bottom-sheet-theme($kbtv-client-theme); //
+@include mat-button-theme($kbtv-client-theme); //
+@include mat-button-toggle-theme($kbtv-client-theme); //
+@include mat-card-theme($kbtv-client-theme); //
+@include mat-checkbox-theme($kbtv-client-theme); //
+@include mat-dialog-theme($kbtv-client-theme); //
+@include mat-divider-theme($kbtv-client-theme); //
+@include mat-form-field-theme($kbtv-client-theme); //
+@include mat-grid-list-theme($kbtv-client-theme); //
+@include mat-icon-theme($kbtv-client-theme); //
+@include mat-input-theme($kbtv-client-theme); //
+@include mat-menu-theme($kbtv-client-theme); //
+@include mat-progress-spinner-theme($kbtv-client-theme); //
+@include mat-tabs-theme($kbtv-client-theme); //
+@include mat-toolbar-theme($kbtv-client-theme); //
+@include mat-tooltip-theme($kbtv-client-theme); //
+@include mat-tabs-theme($kbtv-client-theme); //
+@include mat-toolbar-theme($kbtv-client-theme); //
+@include mat-tooltip-theme($kbtv-client-theme); //
+@include mat-snack-bar-theme($kbtv-client-theme); //
