--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -6,5 +6,5 @@
     <span class="mat-h1">
         Denne siden finnes ikke!
     </span>
-    <button color="primary" mat-raised-button [routerLink]="['/']">Hjem</button>
+    <button color="primary" mat-raised-button [routerLink]="['/hjem']">Hjem</button>
 </span>
