--- a/src/app/shared/layout/main-nav/main-side-nav-content/main-side-nav-content.component.html
+++ b/src/app/shared/layout/main-nav/main-side-nav-content/main-side-nav-content.component.html
@@ -16,7 +16,7 @@
 
 <span class="nav-list">
 
-  <a matRipple (click)="navItemClick()" [routerLink]="['/']" [routerLinkActive]="['active']">
+  <a matRipple (click)="navItemClick()" [routerLink]="['/hjem']" [routerLinkActive]="['active']">
     <mat-icon>home</mat-icon>
     <span>Hjem</span>
   </a>
