--- a/src/app/shared/layout/main-nav/main-nav.component.html
+++ b/src/app/shared/layout/main-nav/main-nav.component.html
@@ -16,14 +16,15 @@
 
     <app-detail-top-nav *ngIf="config.topDetailNavConfig else defaultNav"
       class="flex-nav mat-elevation-z4 slideInDown"
-      [config]="config.topDetailNavConfig" 
+      [config]="config.topDetailNavConfig" [currentUserRole]="config?.currentUser?.role"
       (menuBtnClicked)="toggleDrawer(config.isXs)" >
     </app-detail-top-nav>
 
     <ng-template #defaultNav>
       <app-main-top-nav class="flex-nav bg-primary" 
         [ngClass]="config.topDefaultNavConfig?.elevationDisabled ? '' : 'mat-elevation-z4'"
-        [config]="config.topDefaultNavConfig" (menuBtnClicked)="toggleDrawer(config.isXs)" 
+        [config]="config.topDefaultNavConfig" [currentUserRole]="config?.currentUser?.role" 
+        (menuBtnClicked)="toggleDrawer(config.isXs)" 
        ></app-main-top-nav>
     </ng-template>
 
