add mat  sidenav theme

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -35,4 +35,5 @@
 @include mat-tabs-theme($kbtv-client-theme); //
 @include mat-toolbar-theme($kbtv-client-theme); //
 @include mat-tooltip-theme($kbtv-client-theme); //
-@include mat-snack-bar-theme($kbtv-client-theme); //
+@include mat-snack-bar-theme($kbtv-client-theme); // 
+@include mat-sidenav-theme($kbtv-client-theme) //
