moved mission form to seperate module

--- a/src/app/mission/mission-details/mission-details.component.html
+++ b/src/app/mission/mission-details/mission-details.component.html
@@ -1,3 +1,5 @@
 
     <app-mission-details-view *ngIf="vm$ | async; let vm" [vm]="vm">
     </app-mission-details-view>
+
+    <router-outlet></router-outlet>
