--- a/src/app/mission/mission-list/mission-list.component.html
+++ b/src/app/mission/mission-list/mission-list.component.html
@@ -2,3 +2,5 @@
   [missions]="vm.missions | sortByDate : vm.pageInfo?.historic ? 'lastVisited':'updatedAt' : 'desc'" 
   (search)="searchMissionList($event)">
 </app-mission-list-view>
+
+<router-outlet></router-outlet>
