seperated note & document form to modules

--- a/src/app/mission/mission-document-list/mission-document-list.component.html
+++ b/src/app/mission/mission-document-list/mission-document-list.component.html
@@ -21,3 +21,5 @@
 <button *ifRole="[Roles.Leder]" mat-fab aria-label="ny" class="action_fab" (click)="openDocumentForm()">
     <mat-icon>note_add</mat-icon>
 </button>
+
+<router-outlet></router-outlet>
