--- a/src/app/mission/mission-note-list/mission-note-list.component.html
+++ b/src/app/mission/mission-note-list/mission-note-list.component.html
@@ -8,3 +8,5 @@
 <button *ifRole="RolePresets.Internal" mat-fab aria-label="ny" class="action_fab" (click)="openCreateNoteForm()">
     <mat-icon>add</mat-icon>
 </button>
+
+<router-outlet></router-outlet>
