--- a/src/app/shared/components/mail-to-form/mail-to-form.component.html
+++ b/src/app/shared/components/mail-to-form/mail-to-form.component.html
@@ -10,7 +10,7 @@
     </mat-form-field>
     
     <button appHttpCommandButton mat-raised-button class="w-100" color="primary" 
-        [disabled]="mailToForm.invalid || mailToForm.pristine"
+        [disabled]="mailToForm.invalid"
         (click)="onSubmit()">
         Send   
     </button>
