--- a/src/app/timesheet/timesheet-list/timesheet-list.component.html
+++ b/src/app/timesheet/timesheet-list/timesheet-list.component.html
@@ -21,3 +21,5 @@
         <button mat-raised-button color="accent" class="bounceIn" (click)="openFilterSheet()">Åpne filter</button>
     </span>
 </ng-template>
+
+<router-outlet></router-outlet>
