--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,39 +1,38 @@
 <div class="p-2 max-width">
-  <mat-grid-list cols="2" rowHeight="3:2" gutterSize="5" class="mat-subheading-2 mb-2">
-    <mat-grid-tile class="mat-elevation-z2 bg-foreground route-anim-block" matRipple [routerLink]="['/oppdrag']">
-      <span class="text-center">
-        <mat-icon class="scale-150">view_list</mat-icon><br />
-        <span>Oppdrag</span>
-      </span>
-    </mat-grid-tile>
-    <mat-grid-tile *ifRole="rolePresets.Internal" class="mat-elevation-z2 bg-foreground route-anim-block" matRipple
-      [routerLink]="['/timer']">
-      <span class="text-center">
-        <mat-icon class="scale-150">timer</mat-icon><br />
-        <span>Timer</span>
-      </span>
-    </mat-grid-tile>
-    <mat-grid-tile *ifRole="rolePresets.External" class="mat-elevation-z2 bg-foreground route-anim-block" matRipple
-      [routerLink]="['/profil']">
-      <span class="text-center">
-        <mat-icon class="scale-150">person</mat-icon><br />
-        <span>Profil</span>
-      </span>
-    </mat-grid-tile>
-  </mat-grid-list>
+
+  <div fxLayout="row" fxLayoutGap="8px">
+    <span class="mat-elevation-z2 bg-foreground route-anim-block text-center p-6" fxFlex="50" matRipple
+      [routerLink]="['/oppdrag']">
+      <mat-icon class="scale-150 mb-1">view_list</mat-icon><br />
+      <span>Oppdrag</span>
+    </span>
+    <span *ifRole="rolePresets.Internal" class="mat-elevation-z2 bg-foreground route-anim-block text-center p-6"
+      fxFlex="50" matRipple [routerLink]="['/timer']">
+      <mat-icon class="scale-150 mb-1">timer</mat-icon><br />
+      <span>Timer</span>
+    </span>
+    <span *ifRole="rolePresets.External" class="mat-elevation-z2 bg-foreground route-anim-block text-center p-6"
+      fxFlex="50" matRipple [routerLink]="['/profil']">
+      <mat-icon class="scale-150">person</mat-icon><br />
+      <span>Profil</span>
+    </span>
+  </div>
 
   <ng-container *ifRole="[Roles.Leder]">
     <span class="mat-body-2 route-anim-block">Administrering</span>
 
-    <app-list-card text="Administrer timer" startIcon="date_range" panelClass="route-anim-block" [routerLink]="['/timeadministrering']">
+    <app-list-card text="Administrer timer" startIcon="date_range" panelClass="route-anim-block"
+      [routerLink]="['/timeadministrering']">
     </app-list-card>
-    <app-list-card text="Administrer data" startIcon="dns" panelClass="route-anim-block"[routerLink]="['/data']">
+    <app-list-card text="Administrer data" startIcon="dns" panelClass="route-anim-block" [routerLink]="['/data']">
     </app-list-card>
-    <app-list-card text="Administrer brukere" startIcon="people" panelClass="route-anim-block" [routerLink]="['/brukere']">
+    <app-list-card text="Administrer brukere" startIcon="people" panelClass="route-anim-block"
+      [routerLink]="['/brukere']">
     </app-list-card>
 
     <span class="mat-body-2 route-anim-block">Statistikk</span>
-    <app-list-card text="Timestatistikk" startIcon="assessment" panelClass="route-anim-block" [routerLink]="['/timestatistikk']">
+    <app-list-card text="Timestatistikk" startIcon="assessment" panelClass="route-anim-block"
+      [routerLink]="['/timestatistikk']">
     </app-list-card>
   </ng-container>
 
