preloading based on role, new apppage enum

--- a/src/app/layout/main-nav/main-bottom-nav/main-bottom-nav.component.html
+++ b/src/app/layout/main-nav/main-bottom-nav/main-bottom-nav.component.html
@@ -22,6 +22,6 @@
 
         <button *ifRole="RolePresets.Internal" [routerLink]="['/timer']" [routerLinkActive]="['active']" fxFlex
          mat-icon-button aria-label="Gå til timeliste">
-            <mat-icon matBadgeColor="warn" matBadgeSize="small">timer</mat-icon>
+            <mat-icon>timer</mat-icon>
         </button>
 </mat-toolbar>
