--- a/src/app/layout/main-nav/detail-top-nav/detail-top-nav.component.scss
+++ b/src/app/layout/main-nav/detail-top-nav/detail-top-nav.component.scss
@@ -2,7 +2,8 @@
 
 .container {
     position:relative;
-    background-color:$primary;
+    background-color:$primary; 
+    min-height:100px;
     max-height:40vh;
   }
 
