--- a/src/app/users/user-list/user-card/user-card.component.html
+++ b/src/app/users/user-list/user-card/user-card.component.html
@@ -5,15 +5,13 @@
 
         <span class="ellipsis mr-auto">
             <span class="mat-h4">{{ user.firstName }} {{ user.lastName }}</span><br />
-            <mat-hint *ngIf="user.employerId | getEmployerById; let employer">{{ employer.name }}</mat-hint>
+            <mat-hint *ngIf="user.employer">{{ user.employer.name }}</mat-hint>
         </span>
 
         <span>
             <a *ngIf="user.phoneNumber" class="color-success" mat-icon-button href="tel:{{ user.phoneNumber }}"><mat-icon>phone</mat-icon></a>
             <app-icon-button *ngIf="editButton && user.role != Roles.Leder" [config]="editButton"></app-icon-button>
         </span>
-
-       
-
+ 
     </mat-card-content>
 </mat-card>
