--- a/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
+++ b/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
@@ -15,7 +15,7 @@
     </span>
 
     <app-timesheet-statistic-table class="mat-elevation-z2" fxFlex
-        [timesheetSummaries]="timesheetSummaries$ | async" [users]="users$ | async">
+        [timesheetSummaries]="timesheetSummaries$ | async">
     </app-timesheet-statistic-table>
 
 </div>
