--- a/src/app/login-prompt/login-prompt/login-prompt.component.html
+++ b/src/app/login-prompt/login-prompt/login-prompt.component.html
@@ -1,7 +1,7 @@
 <div class="app-card m-5 fadeIn max-width" fxLayout="column" fxLayoutAlign="center stretch">
 
   <span fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px"  class="mb-4">
-    <img src="assets/icons/icon-144x144.png" style="width:40px;height:40px" />
+    <img src="assets/icons/icon-144x144.png" style="width:40px;height:40px" alt="Logo bilde" />
     
     <span class="mat-body-strong line-height-100">Bjørkelangen<br />Bygg og Eiendom</span>
   </span>
